--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,14 @@
 		<welcome-file>default.htm</welcome-file>
 	</welcome-file-list>
 	<filter>
+    	<filter-name>CSPFilter</filter-name>
+    	<filter-class>Filter.CSPFilter</filter-class>
+	</filter>
+	<filter-mapping>
+    	<filter-name>CSPFilter</filter-name>
+    	<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter>
 		<filter-name>sitemesh</filter-name>
 		<filter-class>com.opensymphony.module.sitemesh.filter.PageFilter</filter-class>
 	</filter>
@@ -20,4 +28,5 @@
 		<filter-name>sitemesh</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
 </web-app>
